--- a/atlas-nginx-svc.yaml
+++ b/atlas-nginx-svc.yaml
@@ -7,7 +7,7 @@ metadata:
    labels:
      io.kompose.service: atlas-nginx
    name: atlas-nginx
-   namespace: atlas
+   namespace: atlas-updated
 spec:
   ports:
   - name: "80"
