--- a/atlas-launch-svc.yaml
+++ b/atlas-launch-svc.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     io.kompose.service: atlas-launchvm
   name: atlas-launchvm
-  namespace: atlas
+  namespace: atlas-updated
 spec:
   ports:
   - name: "7070"
