--- a/atlas-agentless-deploy.yaml
+++ b/atlas-agentless-deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-agentless
   name: atlas-agentless
-  namespace: atlas
+  namespace: atlas-updated
 spec:
   replicas: 1
   strategy: {}
