--- a/atlas-pgbackuprestore-svc.yaml
+++ b/atlas-pgbackuprestore-svc.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-pgbackuprestore
   name: atlas-pgbackuprestore
-  namespace: atlas-updated
+  namespace: atlas
 spec:
   type: NodePort 
   ports:
