--- a/atlas-agentless-svc.yaml
+++ b/atlas-agentless-svc.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-agentless
   name: atlas-agentless
-  namespace: atlas-updated
+  namespace: atlas
 spec:
   type: NodePort 
   ports:  
