--- a/atlas-api-deploy.yaml
+++ b/atlas-api-deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels: 
     io.kompose.service: atlas-api
   name: atlas-api
-  namespace: atlas-updated
+  namespace: atlas
 spec: 
   replicas: 1
   strategy: {}
