--- a/atlas-import-svc.yaml
+++ b/atlas-import-svc.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-importexport
   name: atlas-importexport
-  namespace: atlas-updated
+  namespace: atlas
 spec:
   type: LoadBalancer 
   ports:
