--- a/atlas-importexport.yaml
+++ b/atlas-importexport.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-importexport
   name: atlas-importexport
-  namespace: atlas-updated
+  namespace: atlas
 spec:
   replicas: 1
   strategy: {}
