--- a/atlas-launch-vm.yaml
+++ b/atlas-launch-vm.yaml
@@ -38,7 +38,7 @@ spec:
         - name: POSTGRES_HOST
           value: atlas-postgres-postgresql
         - name: POSTGRES_PASSWORD
-          value: ANqtHVIgf0
+          value: 07TKePhmaz
         - name: POSTGRES_PORT
           value: "5432"
         - name: POSTGRES_USER
