--- a/atlas-mongobackuprestore-svc.yaml
+++ b/atlas-mongobackuprestore-svc.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-mongobackuprestore
   name: atlas-mongobackuprestore
-  namespace: atlas-updated
+  namespace: atlas
 spec:
   type: NodePort 
   ports:
