--- a/atlas-nginx.yaml
+++ b/atlas-nginx.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     io.kompose.service: atlas-nginx
   name: atlas-nginx
-  namespace: atlas-updated
+  namespace: atlas
 spec:
   replicas: 1
   strategy: {}
