--- a/atlas-collector.yaml
+++ b/atlas-collector.yaml
@@ -34,7 +34,7 @@ spec:
         - name: RABBIT_HOST
           value: atlas-rabbitmq.atlas.svc.cluster.local
         - name: RABBIT_PASS
-          value: iBdIS3I3c5
+          value: "b85t9DXJ7s"
         - name: RABBIT_PORT
           value: "5672"
         - name: RABBIT_PORT_SSL
